--- a/conf/config.json
+++ b/conf/config.json
@@ -1,1 +1,1 @@
-{"interval":"60","port":9998,"workingHours":{"from":"","to":""},"demoMode":false,"analyticsEnabled":null,"sqlitepath":"/db"}
+{"interval":60,"port":9998,"workingHours":{"from":"","to":""},"demoMode":false,"analyticsEnabled":false,"sqlitepath":"/db"}
