--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fredy",
-  "version": "12.0.2",
+  "version": "12.1.0",
   "description": "[F]ind [R]eal [E]states [d]amn eas[y].",
   "scripts": {
     "prepare": "husky",
@@ -57,8 +57,6 @@
   ],
   "dependencies": {
     "@douyinfe/semi-ui": "2.86.0",
-    "@rematch/core": "2.2.0",
-    "@rematch/loading": "2.1.2",
     "@sendgrid/mail": "8.1.5",
     "@visactor/react-vchart": "^2.0.4",
     "@visactor/vchart": "^2.0.4",
@@ -80,19 +78,17 @@
     "puppeteer": "^24.22.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "query-string": "9.3.0",
+    "query-string": "9.3.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-redux": "9.2.0",
     "react-router": "7.9.1",
     "react-router-dom": "7.9.1",
-    "redux": "5.0.1",
-    "redux-thunk": "3.1.0",
     "restana": "5.1.0",
     "serve-static": "2.2.0",
     "slack": "11.0.2",
     "vite": "7.1.6",
-    "x-var": "^3.0.1"
+    "x-var": "^3.0.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "7.28.4",
@@ -110,7 +106,6 @@
     "lint-staged": "16.1.6",
     "mocha": "11.7.2",
     "nodemon": "^3.1.10",
-    "prettier": "3.6.2",
-    "redux-logger": "3.0.6"
+    "prettier": "3.6.2"
   }
 }
