--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "Firefox ESR"
   ],
   "dependencies": {
+    "@douyinfe/semi-icons": "^2.86.0",
     "@douyinfe/semi-ui": "2.86.0",
     "@sendgrid/mail": "8.1.5",
     "@visactor/react-vchart": "^2.0.4",
