--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fredy",
-  "version": "12.2.0",
+  "version": "12.2.1",
   "description": "[F]ind [R]eal [E]states [d]amn eas[y].",
   "scripts": {
     "prepare": "husky",
@@ -85,6 +85,7 @@
     "react-router": "7.9.2",
     "react-router-dom": "7.9.2",
     "restana": "5.1.0",
+    "semver": "^7.7.2",
     "serve-static": "2.2.0",
     "slack": "11.0.2",
     "vite": "7.1.7",
@@ -104,7 +105,7 @@
     "history": "5.3.0",
     "husky": "9.1.7",
     "less": "4.4.1",
-    "lint-staged": "16.2.0",
+    "lint-staged": "16.2.1",
     "mocha": "11.7.2",
     "nodemon": "^3.1.10",
     "prettier": "3.6.2"
