--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fredy",
-  "version": "16.0.1",
+  "version": "16.1.0",
   "description": "[F]ind [R]eal [E]states [d]amn eas[y].",
   "scripts": {
     "prepare": "husky",
@@ -62,12 +62,10 @@
     "@douyinfe/semi-icons": "^2.89.0",
     "@douyinfe/semi-ui": "2.89.0",
     "@sendgrid/mail": "8.1.6",
-    "@visactor/react-vchart": "^2.0.10",
-    "@visactor/vchart": "^2.0.10",
-    "@visactor/vchart-semi-theme": "^1.12.2",
     "@vitejs/plugin-react": "5.1.2",
     "better-sqlite3": "^12.5.0",
     "body-parser": "2.2.1",
+    "chart.js": "^4.5.1",
     "cheerio": "^1.1.2",
     "cookie-session": "2.1.1",
     "handlebars": "4.7.8",
@@ -78,11 +76,12 @@
     "node-mailjet": "6.0.11",
     "p-throttle": "^8.1.0",
     "package-up": "^5.0.0",
-    "puppeteer": "^24.32.1",
+    "puppeteer": "^24.33.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "query-string": "9.3.1",
     "react": "18.3.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "18.3.1",
     "react-router": "7.10.1",
     "react-router-dom": "7.10.1",
@@ -100,7 +99,7 @@
     "@babel/preset-env": "7.28.5",
     "@babel/preset-react": "7.28.5",
     "chai": "6.2.1",
-    "eslint": "9.39.1",
+    "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-react": "7.37.5",
     "esmock": "2.7.3",
