--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fredy",
-  "version": "18.0.0",
+  "version": "18.0.1",
   "description": "[F]ind [R]eal [E]states [d]amn eas[y].",
   "scripts": {
     "prepare": "husky",
@@ -59,8 +59,8 @@
     "Firefox ESR"
   ],
   "dependencies": {
-    "@douyinfe/semi-icons": "^2.90.11",
-    "@douyinfe/semi-ui": "2.90.11",
+    "@douyinfe/semi-icons": "^2.90.13",
+    "@douyinfe/semi-ui": "2.90.13",
     "@sendgrid/mail": "8.1.6",
     "@vitejs/plugin-react": "5.1.2",
     "adm-zip": "^0.5.16",
@@ -85,6 +85,7 @@
     "react": "18.3.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "18.3.1",
+    "react-range-slider-input": "^3.3.2",
     "react-router": "7.12.0",
     "react-router-dom": "7.12.0",
     "restana": "5.1.0",
@@ -96,9 +97,9 @@
     "zustand": "^5.0.10"
   },
   "devDependencies": {
-    "@babel/core": "7.28.5",
-    "@babel/eslint-parser": "7.28.5",
-    "@babel/preset-env": "7.28.5",
+    "@babel/core": "7.28.6",
+    "@babel/eslint-parser": "7.28.6",
+    "@babel/preset-env": "7.28.6",
     "@babel/preset-react": "7.28.5",
     "chai": "6.2.2",
     "eslint": "9.39.2",
@@ -111,6 +112,6 @@
     "lint-staged": "16.2.7",
     "mocha": "11.7.5",
     "nodemon": "^3.1.11",
-    "prettier": "3.7.4"
+    "prettier": "3.8.0"
   }
 }
