moving to react 19

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "dependencies": {
     "@douyinfe/semi-icons": "^2.90.13",
     "@douyinfe/semi-ui": "2.90.13",
+    "@douyinfe/semi-ui-19": "^2.90.13",
     "@sendgrid/mail": "8.1.6",
     "@vitejs/plugin-react": "5.1.2",
     "adm-zip": "^0.5.16",
@@ -82,9 +83,9 @@
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "query-string": "9.3.1",
-    "react": "18.3.1",
+    "react": "19.2.3",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "18.3.1",
+    "react-dom": "19.2.3",
     "react-range-slider-input": "^3.3.2",
     "react-router": "7.12.0",
     "react-router-dom": "7.12.0",
