ci: Switch from yarn to npm in GitHub Actions
The fork uses npm, not yarn. Update CI workflows to:
- Use npm cache instead of yarn cache
- Use npm ci instead of yarn install
- Use npm run scripts instead of yarn scripts

--- a/.github/workflows/check_source.yml
+++ b/.github/workflows/check_source.yml
@@ -14,13 +14,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: 'yarn'
+          cache: 'npm'
 
       - name: Install dependencies
-        run: yarn install
+        run: npm ci
 
       - name: Check formatting
-        run: yarn format:check
+        run: npm run format:check
 
       - name: Lint
-        run: yarn lint
+        run: npm run lint
