fixing eslint harder

--- a/package.json
+++ b/package.json
@@ -99,17 +99,18 @@
     "zustand": "^5.0.11"
   },
   "devDependencies": {
-    "@eslint/js": "^10.0.1",
     "@babel/core": "7.29.0",
     "@babel/eslint-parser": "7.28.6",
     "@babel/preset-env": "7.29.0",
     "@babel/preset-react": "7.28.5",
+    "@eslint/js": "^10.0.1",
     "chai": "6.2.2",
     "chalk": "^5.6.2",
     "eslint": "10.0.0",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-react": "7.37.5",
     "esmock": "2.7.3",
+    "globals": "^17.3.0",
     "history": "5.3.0",
     "husky": "9.1.7",
     "less": "4.5.1",
