--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "body-parser": "2.2.2",
     "chart.js": "^4.5.1",
     "cheerio": "^1.2.0",
+    "@turf/boolean-point-in-polygon": "^7.0.0",
     "cookie-session": "2.1.1",
     "handlebars": "4.7.8",
     "lodash": "4.17.23",
